@@ -26,6 +26,10 @@
 	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13" />
 	</MAP>
 	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
+
+	<!-- new stuff -->
+	<A HREF="http://nowhere.org/" Name="Here">NoWhere</A>
+	<A HREF="http://nowhere.org/padded" Name=" Here "> NoWhere </A>
     </body>
 </html>
 
